--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,8 +2,9 @@
 
 <form action="/users" method="post">
   <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token  %>">
-  <label for="email"><input id="email" name="user[email]" type="text"></label>
-  <label for="password"><input id="password" name="user[password]" type="password"></label>
+  <label for="email">Email: <input id="email" name="user[email]" type="text"></label>
+  <label for="password">Password:<input id="password" name="user[password]" type="password"></label>
 
   <button>Create New User</button>
 </form>
+<a href="/session/new">Sign In</a>
