Creates workspaces index.

--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -5,10 +5,10 @@
   <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token  %>">
   <button>Sign Out</button>
 </form>
-
 <% end %>
+<br>
 
-<div id="content"></div>
-<script type="text/javascript" charset="utf-8">
-  // $(PostApp.initialize);
-</script>
+<div id="main"></div>
+<!-- <script type="text/javascript" charset="utf-8">
+  $(AsanaClone.initialize);
+</script> //calling this in asana_clone.js-->
