Adds and test Projects table and associations

--- a/app/assets/templates/workspaces/form.jst.ejs
+++ b/app/assets/templates/workspaces/form.jst.ejs
@@ -3,6 +3,6 @@
 <form>
   <label for="name">Name</label>
   <input id="name" type="text" name="workspace[name]">
-
+  <!-- will add ability to add members/users to workspace  -->
   <button>Submit</button>
 </form>
