Adds projects to dashboard via composite views.

--- a/app/assets/templates/workspaces/show.jst.ejs
+++ b/app/assets/templates/workspaces/show.jst.ejs
@@ -1,2 +1,4 @@
 <h1> Dashboard (for <%= workspace.escape('name') %>) </h1>
-<!-- will be populated with projects via composite view  -->
+
+<!-- encapsulate this in a div window for styling -->
+<div id="projects"></div>
