Refactors previous project display work into dashboard view, as site functionality is different than I originally understood.

--- a/app/assets/templates/workspaces/dashboard.jst.ejs
+++ b/app/assets/templates/workspaces/dashboard.jst.ejs
@@ -1,4 +1,4 @@
 <h1> Dashboard (for <%= workspace.escape('name') %>) </h1>
 
 <!-- encapsulate this in a div window for styling -->
-<div id="projects"></div>
+<div id="dash-projects"></div>
