--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -8,7 +8,9 @@
 <% end %>
 <br>
 
+<div id="sidebar"></div>
 <div id="main"></div>
+<div id="detail"></div>
 <!-- <script type="text/javascript" charset="utf-8">
   $(AsanaClone.initialize);
 </script> //calling this in asana_clone.js-->
