Html tag name changes.

--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -8,9 +8,17 @@
 <% end %>
 <br>
 
-<div id="sidebar"></div>
-<div id="main"></div>
-<div id="detail"></div>
+<div id="content">
+  Sidebar:
+  <div class="sidebar"></div>
+  Main:
+  <div class="main"></div>
+  Detail:
+  <div class="detail"></div>
+  <!-- need to figure out how to do layout - for now just creating elements
+  and will put them all in #content to be pulled out later -->
+</div>
+
 <!-- <script type="text/javascript" charset="utf-8">
   $(AsanaClone.initialize);
 </script> //calling this in asana_clone.js-->
