Creates link to create a new project. (But link renders twice)

--- a/app/assets/templates/workspaces/show.jst.ejs
+++ b/app/assets/templates/workspaces/show.jst.ejs
@@ -1,4 +1,8 @@
 <h1> Projects </h1>
 <a href="#/projects/new">Add New Project</a>
 
-<div id="projects"></div>
+<div class="projects-window">
+  <div id="projects"></div>
+
+  <div id="project-form"></div>
+</div>
