--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -21,4 +21,4 @@
 
 <!-- <script type="text/javascript" charset="utf-8">
   $(AsanaClone.initialize);
-</script> //calling this in asana_clone.js-->
+</script> -->
