--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -1,24 +1,5 @@
-<h1>Asana Clone</h1>
-<% if signed_in? %>
-<form action="/session" method="post">
-  <input type="hidden" name="_method" value="delete">
-  <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token  %>">
-  <button>Sign Out</button>
-</form>
-<% end %>
-<br>
+<div id="content"></div>
 
-<div id="content">
-  Sidebar:
-  <div class="sidebar"></div>
-  Main:
-  <div class="main"></div>
-  Detail:
-  <div class="detail"></div>
-  <!-- need to figure out how to do layout - for now just creating elements
-  and will put them all in #content to be pulled out later -->
-</div>
-
-<!-- <script type="text/javascript" charset="utf-8">
+<script type="text/javascript" charset="utf-8">
   $(AsanaClone.initialize);
-</script> -->
+</script>
