Adds tasks to Project Show page

--- a/app/assets/templates/projects/show.jst.ejs
+++ b/app/assets/templates/projects/show.jst.ejs
@@ -1,5 +1,5 @@
 <h1> <%= project.escape('name') %></h1>
 
-<div>
-  Tasks will be listed here
+<div class="tasks-window">
+  <div id="tasks"></div>
 </div>
