Makes taks editable in place from Project show page.

--- a/app/assets/templates/projects/show.jst.ejs
+++ b/app/assets/templates/projects/show.jst.ejs
@@ -1,5 +1,7 @@
 <h1> <%= project.escape('name') %></h1>
 
 <div class="tasks-window">
+  <h4>Tasks</h4>
   <div id="tasks"></div>
+  <div>Placeholder text to create new task - will be a blank box</div>
 </div>
