--- a/app/assets/templates/tasks/link-item.jst.ejs
+++ b/app/assets/templates/tasks/link-item.jst.ejs
@@ -1,1 +1,1 @@
-<a href="" class="task-link" data-id="<%= task.id %>"><h3><%=task.escape('name')%></h3></a>
+<h3 class="editable" data-id="<%= task.id %>" data-field="name"><%=task.escape('name')%></h3>
