Begins to make new task link.

--- a/app/assets/templates/projects/show.jst.ejs
+++ b/app/assets/templates/projects/show.jst.ejs
@@ -3,5 +3,5 @@
 <div class="tasks-window">
   <h4>Tasks</h4>
   <div id="tasks"></div>
-  <div>Placeholder text to create new task - will be a blank box</div>
+  <div id="task-form"></div>
 </div>
