Adds Task Detail Show.

--- a/app/assets/templates/tasks/link-item.jst.ejs
+++ b/app/assets/templates/tasks/link-item.jst.ejs
@@ -1,1 +1,8 @@
-<h3 class="editable" data-id="<%= task.id %>" data-field="name"><%=task.escape('name')%></h3>
+
+<h3 class="editable" data-id="<%= task.id %>" data-field="name">
+    <%=task.escape('name')%>
+</h3>
+<button data-id="<%= task.id %>" class="task-detail">Detail ></button>
+
+
+    <!-- can do whites-space in CSS to fix this breaking line -->
