--- a/app/assets/templates/tasks/mini_form.jst.ejs
+++ b/app/assets/templates/tasks/mini_form.jst.ejs
@@ -1,8 +1,5 @@
-<form class="form">
+<form class="task-form">
   <div class="form-group">
       <input id="name" type="text">
   </div>
-  <button>Add</button>
-  <a href="#" class="close">&times;</a>
-  <!-- link to close and back to index, &times is an x -->
 </form>
