--- a/app/assets/templates/tasks/show.jst.ejs
+++ b/app/assets/templates/tasks/show.jst.ejs
@@ -15,6 +15,10 @@
 
 <h1> <%= tasks.project.escape('name') %> </h1>
 
+
+
+<input type="checkbox" class="task-completed">
+
 <section id="task-name" class="editable" data-field="name">
   <%= task.escape('name') %>
 </section>
