--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,8 +15,8 @@
         <li><a href="#">*WorkspaceName + Avatar*</a>
 
           <ul class="header-dropdown group">
-            <li><a href="#">*List of Workspaces</a></li>
-            <li><a href="#">*Create and Delete Workspaces</a></li>
+            <li id="workspace-idx"></li>
+            <li><a href="#/workspaces/new">Create New Workspace</a></li>
 
             <li>
               <form action="/session" method="post">
