Attempt to get user info. Needs work.

--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -1,4 +1,4 @@
-<div id="content"></div>
+<div id="app-container" data-user="<%= current_user.id  %>"></div>
 
 <script type="text/javascript" charset="utf-8">
   $(AsanaClone.initialize);
