--- a/app/assets/templates/workspaces/show.jst.ejs
+++ b/app/assets/templates/workspaces/show.jst.ejs
@@ -1,10 +1,14 @@
-<h1> Projects </h1>
-<div class="projects-window">
-  <div id="projects"></div>
+<div id="sidebar">
+  <h4> Projects </h4>
+  <div class="projects-window">
+    <div id="projects"></div>
 
-  <div id="project-form"></div>
+    <div id="project-form"></div>
+  </div>
 </div>
 
-<div class="project-show" id="project-show">
 
-</div>
+<div id="main-page"></div>
+
+
+<div class="project-show" id="project-show"></div>
