--- a/app/assets/templates/projects/link-item.jst.ejs
+++ b/app/assets/templates/projects/link-item.jst.ejs
@@ -1,1 +1,3 @@
-<a href="<%="#/workspaces/" + workspace.id %>" class="project-link" data-id="<%= project.id %>"><h3><%=project.escape('name')%></h3></a>
+<a href="<%="#/workspaces/" + workspace.id %>" class="project-link" data-id="<%= project.id %>">
+  <h5><%=project.escape('name')%></h5>
+</a>
