--- a/app/assets/templates/workspaces/show.jst.ejs
+++ b/app/assets/templates/workspaces/show.jst.ejs
@@ -1,14 +1,26 @@
-<div id="sidebar">
-  <h4> Projects </h4>
-  <div class="projects-window">
-    <div id="projects"></div>
+<div id="sidebar" class="expanded">
+  <nav class="sidebar group">
 
-    <div id="project-form"></div>
-  </div>
+    <h2 class="sidebar-logo">
+      <a href="#">AsanaClone</a>
+    </h2>
+
+    <ul class="sidebar-links">
+      <li><a href="#">*My Tasks</a></li>
+      <li><a href="#">*All Items</a></li>
+    </ul> <br>
+
+    <div class=sidebar-project-links>
+      <div class="sidebar-title group">
+        <h4>PROJECTS</h4>
+        <div id="project-form" class="add-project group"></div>
+      </div>
+      <ul id="projects"></ul>
+    </div>
+
+  </nav>
 </div>
 
-
-<div id="main-page"></div>
-
-
-<div class="project-show" id="project-show"></div>
+<div id="main" class="main">
+  <div class="project-show" id="project-show">Project Show</div>
+</div>
