--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -1,4 +1,6 @@
-<div id="app-container" data-user="<%= current_user.id  %>"></div>
+<% if signed_in? %>
+<div id="app-container" class="container" data-user="<%= current_user.id  %>"></div>
+<% end %>
 
 <script type="text/javascript" charset="utf-8">
   $(AsanaClone.initialize);
