--- a/app/assets/templates/projects/show.jst.ejs
+++ b/app/assets/templates/projects/show.jst.ejs
@@ -1,9 +1,8 @@
 <h1> <%= project.escape('name') %></h1>
 
 <div class="tasks-window">
-  <h4>Tasks</h4>
-  <div id="tasks"></div>
-  <div id="task-form"></div>
+  <ul id="tasks-list" class="tasks-list"></ul>
+  <div id="task-form" class="task-form"></div>
 </div>
 
 <div id="task-detail-show"></div>
