--- a/app/assets/templates/tasks/link-item.jst.ejs
+++ b/app/assets/templates/tasks/link-item.jst.ejs
@@ -1,8 +1,7 @@
-
-<h3 class="editable" data-id="<%= task.id %>" data-field="name">
+<p class="editable" data-id="<%= task.id %>" data-field="name">
     <%=task.escape('name')%>
-</h3>
-<button data-id="<%= task.id %>" class="task-detail">Detail ></button>
+</p>
+<button data-id="<%= task.id %>" class="task-detail">></button>
 
 
     <!-- can do whites-space in CSS to fix this breaking line -->
