--- a/app/assets/templates/workspaces/show.jst.ejs
+++ b/app/assets/templates/workspaces/show.jst.ejs
@@ -2,7 +2,7 @@
   <nav class="sidebar group">
 
     <h2 class="sidebar-logo">
-      <a href="#">AsanaClone</a>
+      <a href="#">ImGonna</a>
     </h2>
 
     <ul class="sidebar-links">
@@ -22,5 +22,5 @@
 </div>
 
 <div id="main" class="main">
-  <div class="project-show" id="project-show">Project Show</div>
+  <div class="project-show" id="project-show"></div>
 </div>
