--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,10 +3,10 @@
     <nav class="header-navbar group">
 
       <ul class="header-links group">
-        <li><a href="">My Tasks</a></li>
-        <li><a href="">My Inbox</a></li>
-        <li><a href="">*Dropdown</a></li>
-        <li><a href="">*Search</a></li>
+        <li><a href="#">*My Tasks</a></li>
+        <li><a href="#">*My Inbox</a></li>
+        <li><a href="#">*Dropdown</a></li>
+        <li><a href="#">*Search</a></li>
 
         <li><a href="#">*WorkspaceName + Avatar*</a>
 
