--- a/app/assets/templates/projects/show.jst.ejs
+++ b/app/assets/templates/projects/show.jst.ejs
@@ -5,4 +5,4 @@
   <div id="task-form" class="task-form"></div>
 </div>
 
-<div id="task-detail-show"></div>
+<div class="task-detail-show" id="task-detail-show"></div>
