--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-
+<% if signed_in? %>
   <header class="header">
     <nav class="header-navbar group">
 
@@ -29,3 +29,4 @@
 
     </nav>
   </header>
+<% end %>
