--- a/app/assets/templates/workspaces/show.jst.ejs
+++ b/app/assets/templates/workspaces/show.jst.ejs
@@ -23,4 +23,5 @@
 
 <div id="main" class="main">
   <div class="project-show" id="project-show"></div>
+  <div class="task-detail-show" id="task-detail-show"></div>
 </div>
