--- a/app/assets/templates/users/taskshow.jst.ejs
+++ b/app/assets/templates/users/taskshow.jst.ejs
@@ -1,11 +1,4 @@
-<h1></h1>
-
-user.assigned_tasks();
-
-***********i was here
-user.created_tasks.forEach(function(task) {
-
-})
+<h1> <%= user.escape('email') %></h1>
 
 <div class="tasks-window">
   <ul id="tasks-list" class="tasks-list"></ul>
