Commit in order to  push to heroku as instructed.

--- a/app/assets/templates/projects/show.jst.ejs
+++ b/app/assets/templates/projects/show.jst.ejs
@@ -1,5 +1,6 @@
 <h1> <%= project.escape('name') %></h1>
-
+*FYI - Ability to see detail of tasks broke when I <br> 
+added some features...working on it!
 <div class="tasks-window">
   <ul id="tasks-list" class="tasks-list"></ul>
   <div id="task-form" class="task-form"></div>
