--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -7,7 +7,7 @@
   <div class="login group">
     <h1 class="login-head">Sign Up</h1>
 
-    <form class="login-form" action="/users" method="post">
+    <form class="login-form group" action="/users" method="post">
       <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token  %>">
       <label class="login-label" for="email">Email: <input class="login-input" id="email" name="user[email]" type="text"></label> <br>
       <label class="login-label" for="password">Password:<input class="login-input" id="password" name="user[password]" type="password"></label>
