--- a/app/assets/templates/tasks/show.jst.ejs
+++ b/app/assets/templates/tasks/show.jst.ejs
@@ -19,7 +19,7 @@
 </nav>
 
 <div class="task-show">
-  <h4 class="project-name"> projectname/noproject </h4>
+  <h4 class="project-name"> <%= project.escape('name') %> </h4>
 
   <input type="checkbox" class="task-completed">
 
