Editing and clean up of code. Adds workspace_id to tasks.

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,13 +2,13 @@
   <header class="header">
     <nav class="header-navbar group">
 
-      <ul class="header-links group">
+      <ul id="header-links" class="header-links group">
         <li><a href="#">*My Tasks</a></li>
         <li><a href="#">*My Inbox</a></li>
         <li><a href="#">*Dropdown</a></li>
         <li><a href="#">*Search</a></li>
 
-        <li><a href="#">*WorkspaceName + Avatar*</a>
+        <li><div id="current-workspace"></div>
 
           <ul class="header-dropdown group">
             <li id="workspace-idx"></li>
