--- a/app/assets/templates/projects/link-item.jst.ejs
+++ b/app/assets/templates/projects/link-item.jst.ejs
@@ -1,5 +1,7 @@
 <a href="<%="#/workspaces/" + workspace.id %>" class="project-link" data-id="<%= project.id %>">
-  <% if (project.escape('name') !== "No Project") { %>
-      <h5> <%= project.escape('name') %> </h5>
-  <% } %>
+  <% if (project.escape('name') === "") { %>
+    <h5>No Project</h5>
+  <% } else { %>
+  <h5> <%= project.escape('name') %> </h5>
+  <% } %> 
 </a>
