Can view tasks from every link and by refeshing page.

--- a/app/assets/templates/workspaces/show.jst.ejs
+++ b/app/assets/templates/workspaces/show.jst.ejs
@@ -6,7 +6,7 @@
     </h2>
 
     <ul class="sidebar-links">
-      <li><a href="#">*My Tasks</a></li>
+      <li class="my-tasks">My Tasks</li>
       <li><a href="#">*All Items</a></li>
     </ul> <br>
 
