--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -3,5 +3,6 @@
 <% end %>
 
 <script type="text/javascript" charset="utf-8">
-  $(AsanaClone.initialize);
+    // AsanaClone.currentUserID = <%= current_user.id  %>
+    $(AsanaClone.initialize);
 </script>
